Создано с помощью Colaboratory

--- a/task_sber.ipynb
+++ b/task_sber.ipynb
@@ -43,46 +43,68 @@
       "metadata": {
         "id": "zBMdaKATHrUS"
       },
-      "execution_count": 29,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df"
+        "df=pd.merge(df,df_name)"
       ],
       "metadata": {
-        "id": "tcNY-c0vTqs3",
-        "outputId": "990b4c0e-f119-48b9-d15c-6c46cd4d9bc4",
+        "id": "isR5xh6Khejv"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_nun=df.drop_duplicates(subset=['Date','ID','Name'],inplace=False)"
+      ],
+      "metadata": {
+        "id": "tcNY-c0vTqs3"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_nun"
+      ],
+      "metadata": {
+        "id": "Q8ZQNCRnhOmx",
+        "outputId": "70391d30-5434-490f-a5bd-8f855b2693a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 30,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "          Date  ID  Sales\n",
-              "0   2020-01-01   2      4\n",
-              "1   2020-01-01   1     37\n",
-              "2   2020-01-01   1      5\n",
-              "3   2020-02-01   3     30\n",
-              "4   2020-02-01   1     12\n",
-              "..         ...  ..    ...\n",
-              "128 2021-09-01   2     39\n",
-              "129 2021-09-01   1     26\n",
-              "130 2021-09-01   1     35\n",
-              "131 2021-09-01   2     16\n",
-              "132 2021-10-01   4     40\n",
+              "          Date  ID  Sales  Name\n",
+              "0   2020-01-01   2      4  Петя\n",
+              "1   2020-03-01   2     30  Петя\n",
+              "3   2020-04-01   2     33  Петя\n",
+              "4   2020-05-01   2     18  Петя\n",
+              "5   2020-06-01   2     35  Петя\n",
+              "..         ...  ..    ...   ...\n",
+              "124 2021-04-01   4     10  Даша\n",
+              "125 2021-06-01   4     15  Даша\n",
+              "130 2021-07-01   4     27  Даша\n",
+              "131 2021-08-01   4     32  Даша\n",
+              "132 2021-10-01   4     40  Даша\n",
               "\n",
-              "[133 rows x 3 columns]"
+              "[75 rows x 4 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3a032be4-1c1e-4eae-be34-47690f3a0133\">\n",
+              "  <div id=\"df-0ab5a739-af13-4273-be24-3c37e23939fc\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -105,6 +127,7 @@
               "      <th>Date</th>\n",
               "      <th>ID</th>\n",
               "      <th>Sales</th>\n",
+              "      <th>Name</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -113,72 +136,83 @@
               "      <td>2020-01-01</td>\n",
               "      <td>2</td>\n",
               "      <td>4</td>\n",
+              "      <td>Петя</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2020-01-01</td>\n",
-              "      <td>1</td>\n",
-              "      <td>37</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2020-01-01</td>\n",
-              "      <td>1</td>\n",
-              "      <td>5</td>\n",
+              "      <td>2020-03-01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>30</td>\n",
+              "      <td>Петя</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2020-02-01</td>\n",
-              "      <td>3</td>\n",
-              "      <td>30</td>\n",
+              "      <td>2020-04-01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>33</td>\n",
+              "      <td>Петя</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2020-02-01</td>\n",
-              "      <td>1</td>\n",
-              "      <td>12</td>\n",
+              "      <td>2020-05-01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>18</td>\n",
+              "      <td>Петя</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2020-06-01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>35</td>\n",
+              "      <td>Петя</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>128</th>\n",
-              "      <td>2021-09-01</td>\n",
-              "      <td>2</td>\n",
-              "      <td>39</td>\n",
+              "      <th>124</th>\n",
+              "      <td>2021-04-01</td>\n",
+              "      <td>4</td>\n",
+              "      <td>10</td>\n",
+              "      <td>Даша</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>129</th>\n",
-              "      <td>2021-09-01</td>\n",
-              "      <td>1</td>\n",
-              "      <td>26</td>\n",
+              "      <th>125</th>\n",
+              "      <td>2021-06-01</td>\n",
+              "      <td>4</td>\n",
+              "      <td>15</td>\n",
+              "      <td>Даша</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>130</th>\n",
-              "      <td>2021-09-01</td>\n",
-              "      <td>1</td>\n",
-              "      <td>35</td>\n",
+              "      <td>2021-07-01</td>\n",
+              "      <td>4</td>\n",
+              "      <td>27</td>\n",
+              "      <td>Даша</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>131</th>\n",
-              "      <td>2021-09-01</td>\n",
-              "      <td>2</td>\n",
-              "      <td>16</td>\n",
+              "      <td>2021-08-01</td>\n",
+              "      <td>4</td>\n",
+              "      <td>32</td>\n",
+              "      <td>Даша</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>132</th>\n",
               "      <td>2021-10-01</td>\n",
               "      <td>4</td>\n",
               "      <td>40</td>\n",
+              "      <td>Даша</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>133 rows × 3 columns</p>\n",
+              "<p>75 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3a032be4-1c1e-4eae-be34-47690f3a0133')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0ab5a739-af13-4273-be24-3c37e23939fc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -229,12 +263,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3a032be4-1c1e-4eae-be34-47690f3a0133 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0ab5a739-af13-4273-be24-3c37e23939fc button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3a032be4-1c1e-4eae-be34-47690f3a0133');\n",
+              "          const element = document.querySelector('#df-0ab5a739-af13-4273-be24-3c37e23939fc');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -257,7 +291,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 43
         }
       ]
     },
@@ -306,12 +340,12 @@
         "data_table.DataTable(df, include_index=False, num_rows_per_page=200)"
       ],
       "metadata": {
-        "id": "cOo5ERhXYMSo",
-        "outputId": "18edaf74-3178-4908-e2b2-38af0494a1fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 2995
-        }
+        },
+        "id": "cOo5ERhXYMSo",
+        "outputId": "18edaf74-3178-4908-e2b2-38af0494a1fb"
       },
       "execution_count": 34,
       "outputs": [
@@ -442,12 +476,12 @@
         "df"
       ],
       "metadata": {
-        "id": "ZwYqDMoMTqv-",
-        "outputId": "e684e6e6-0de0-4389-b6ae-defd26b3cc63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "ZwYqDMoMTqv-",
+        "outputId": "e684e6e6-0de0-4389-b6ae-defd26b3cc63"
       },
       "execution_count": 28,
       "outputs": [
@@ -698,11 +732,11 @@
         "  i=i+1"
       ],
       "metadata": {
-        "id": "_R9ak-2tHuRy",
-        "outputId": "2e4ee0f5-d854-4d71-b517-1ce2ec70e3fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_R9ak-2tHuRy",
+        "outputId": "2e4ee0f5-d854-4d71-b517-1ce2ec70e3fb"
       },
       "execution_count": 8,
       "outputs": [
@@ -729,11 +763,11 @@
         "print (w)"
       ],
       "metadata": {
-        "id": "4WNdUCL-J9_a",
-        "outputId": "d7a67ec8-7fde-410a-a9aa-6457b9544e13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4WNdUCL-J9_a",
+        "outputId": "d7a67ec8-7fde-410a-a9aa-6457b9544e13"
       },
       "execution_count": 9,
       "outputs": [
