Создано с помощью Colaboratory

--- a/task_sber.ipynb
+++ b/task_sber.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 102,
       "metadata": {
         "id": "kxi2F3z5ofeQ"
       },
@@ -32,7 +32,7 @@
       "metadata": {
         "id": "l9x61PmWHrLL"
       },
-      "execution_count": 2,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "zBMdaKATHrUS"
       },
-      "execution_count": 3,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "isR5xh6Khejv"
       },
-      "execution_count": 55,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "Q8ZQNCRnhOmx"
       },
-      "execution_count": 61,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "Ox0w0-LOYvFH"
       },
-      "execution_count": 83,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -94,10 +94,226 @@
         "dun_sum"
       ],
       "metadata": {
-        "id": "EFQEXMokdWs5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "EFQEXMokdWs5",
+        "outputId": "343459a1-0f53-4cb4-e3f6-3eb0cc03fe2f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "         Date  ID   Name  Sales\n",
+              "0  2021-02-01   1  Вася     130\n",
+              "1  2020-11-01   2   Петя    130\n",
+              "2  2021-07-01   5   Вика    105\n",
+              "3  2020-10-01   4   Даша     95\n",
+              "4  2021-09-01   1  Вася      87\n",
+              "..        ...  ..    ...    ...\n",
+              "70 2020-07-01   3   Маша      6\n",
+              "71 2020-01-01   2   Петя      4\n",
+              "72 2020-11-01   1  Вася       3\n",
+              "73 2020-11-01   3   Маша      2\n",
+              "74 2021-08-01   2   Петя      1\n",
+              "\n",
+              "[75 rows x 4 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-cd71df46-8068-4693-9575-11d829b0f721\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Date</th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Sales</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2021-02-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Вася</td>\n",
+              "      <td>130</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2020-11-01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Петя</td>\n",
+              "      <td>130</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2021-07-01</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Вика</td>\n",
+              "      <td>105</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020-10-01</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Даша</td>\n",
+              "      <td>95</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2021-09-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Вася</td>\n",
+              "      <td>87</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>70</th>\n",
+              "      <td>2020-07-01</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Маша</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>71</th>\n",
+              "      <td>2020-01-01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Петя</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>72</th>\n",
+              "      <td>2020-11-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Вася</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>73</th>\n",
+              "      <td>2020-11-01</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Маша</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>74</th>\n",
+              "      <td>2021-08-01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Петя</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>75 rows × 4 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cd71df46-8068-4693-9575-11d829b0f721')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-cd71df46-8068-4693-9575-11d829b0f721 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-cd71df46-8068-4693-9575-11d829b0f721');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -106,13 +322,13 @@
       ],
       "metadata": {
         "id": "zHzXv1CPYvI5",
-        "outputId": "58262bb4-0d2f-4044-8ae0-65d3ee662e23",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1730
-        }
+          "height": 423
+        },
+        "outputId": "452c9081-5c77-4935-8df2-e7da67b3022b"
       },
-      "execution_count": 84,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -135,7 +351,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0f5fd8d3-e3e3-4adf-856d-db1fe47394a9\">\n",
+              "  <div id=\"df-ece1f5ea-d899-42ac-9a59-8979249322b8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -243,7 +459,7 @@
               "</table>\n",
               "<p>75 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0f5fd8d3-e3e3-4adf-856d-db1fe47394a9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ece1f5ea-d899-42ac-9a59-8979249322b8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -294,12 +510,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0f5fd8d3-e3e3-4adf-856d-db1fe47394a9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ece1f5ea-d899-42ac-9a59-8979249322b8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0f5fd8d3-e3e3-4adf-856d-db1fe47394a9');\n",
+              "          const element = document.querySelector('#df-ece1f5ea-d899-42ac-9a59-8979249322b8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -322,7 +538,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 109
         }
       ]
     },
@@ -346,7 +562,7 @@
       "metadata": {
         "id": "_1k3uNdKdRJi"
       },
-      "execution_count": 97,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -357,7 +573,7 @@
       "metadata": {
         "id": "2HSdH_3eeHNI"
       },
-      "execution_count": 98,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -374,9 +590,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_R9ak-2tHuRy",
-        "outputId": "90fe5821-b620-49f0-981e-84fc1ca06498"
+        "outputId": "18223655-16c2-4fda-df5f-e1010ebc138e"
       },
-      "execution_count": 99,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +631,7 @@
       "metadata": {
         "id": "qJPDRSkW8Zvl"
       },
-      "execution_count": 100,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -430,27 +646,27 @@
       ],
       "metadata": {
         "id": "AYSiMKYl8HjE",
-        "outputId": "216a3a4a-6bac-41a7-8aa9-769af35d8c11",
+        "outputId": "ddbbcd14-8e90-4ccc-bd3a-b2da91928462",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 101,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2023-01-12 19:39:58.103996\n",
-            "2023-01-12 19:39:59.106321\n",
-            "2023-01-12 19:40:00.108527\n",
-            "2023-01-12 19:40:01.109899\n",
-            "2023-01-12 19:40:02.111425\n",
-            "2023-01-12 19:40:03.112730\n",
-            "2023-01-12 19:40:04.114101\n",
-            "2023-01-12 19:40:05.115356\n",
-            "2023-01-12 19:40:06.116626\n",
-            "2023-01-12 19:40:07.117955\n"
+            "2023-01-12 19:43:15.023649\n",
+            "2023-01-12 19:43:16.024190\n",
+            "2023-01-12 19:43:17.025112\n",
+            "2023-01-12 19:43:18.026481\n",
+            "2023-01-12 19:43:19.027851\n",
+            "2023-01-12 19:43:20.029303\n",
+            "2023-01-12 19:43:21.030691\n",
+            "2023-01-12 19:43:22.032010\n",
+            "2023-01-12 19:43:23.033350\n",
+            "2023-01-12 19:43:24.034620\n"
           ]
         }
       ]
