Создано с помощью Colaboratory

--- a/Scity+.ipynb
+++ b/Scity+.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "kxi2F3z5ofeQ",
         "colab": {
@@ -38,6 +38,42 @@
         "import html_to_json\n",
         "from google.colab import data_table"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JjWJVsn5Pfkr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Приволжский\n",
+        "dfpriv=pd.DataFrame()\n",
+        "i=16162\n",
+        "while i<16163:\n",
+        " url_doc_list ='https://newdon.ru/zelenyj_kvartal/flat'+str(i)+'.html'\n",
+        " response = requests.get(url_doc_list)\n",
+        " qq=html_to_json.convert(response.text)\n",
+        " if str(response)=='<Response [200]>':\n",
+        "  try: \n",
+        "   price=qq['html'][0]['body'][0]['main'][0]['div'][1]['div'][0]['div'][1]['div'][5]['meta'][0]['_attributes']['content']\n",
+        "   flat=qq['html'][0]['body'][0]['main'][0]['div'][1]['div'][0]['div'][1]['div'][0]['div'][0]['h1'][0]['_value']\n",
+        "   sq=qq['html'][0]['body'][0]['main'][0]['div'][1]['div'][0]['div'][1]['div'][3]['div'][0]['div'][1]['_value']\n",
+        "   new_row = {'id':i, 'flat':flat, 'sq':sq,'price':price}  \n",
+        "   dfpriv=dfpriv.append(new_row, ignore_index=True)\n",
+        "  except:\n",
+        "    pass\n",
+        " i=i+1"
+      ],
+      "metadata": {
+        "id": "DqmQF7c6PfyR"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -321,7 +357,7 @@
       "metadata": {
         "id": "tur145QgHIRm"
       },
-      "execution_count": 218,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -338,7 +374,7 @@
           "height": 144
         }
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,7 +518,7 @@
       "metadata": {
         "id": "4tMVKc1f8F1c"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -542,7 +578,7 @@
       "metadata": {
         "id": "wkxJOJKv8F7z"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -559,7 +595,7 @@
         "id": "PPVTHk4y8GLD",
         "outputId": "9b9d5ab0-38c6-4354-d9ed-9ec121aed9be"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
